--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Github Diary</title>
-    <link rel="stylesheet" href="static/style.css">
-</head>
-<body>
-    
-</body>
-<script src="static/app.js"></script>
+    <link rel="stylesheet" href="static/style.css" />
+  </head>
+  <body>
+    <nav>
+      <div class="profile">
+        <img
+          src="static/images/profile.jpg"
+          alt="profile picture"
+          class="profile-picture"
+        />
+        <div class="name">
+          <h3>Hi there</h3>
+          <h1>Md Mosabbir H. Khan ( @mhk76 )</h1>
+        </div>
+      </div>
+      <div class="profile-buttons">
+        <div class="nav-tabs">
+          <button>New</button><button>Upload</button><button>Share</button>
+        </div>
+      </div>
+    </nav>
+    <header>
+      <div id="logo"><img src="" alt="" /></div>
+      <div class="pending-square"></div>
+    </header>
+    <main>
+      <div class="hero"><h1>Alle Allle</h1></div>
+      <aside class="warning">Alle Allle Alle Allle</aside>
+      <aside class="notice">Alle AllleAlle AllleAlle Allle</aside>
+    </main>
+  </body>
+  <script src="static/app.js"></script>
 </html>
