Create full layout

--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Github Diary</title>
     <link rel="stylesheet" href="static/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
-    <nav>
+    <header>
       <div class="profile">
         <img
           src="static/images/profile.jpg"
@@ -20,19 +27,100 @@
         </div>
       </div>
       <div class="profile-buttons">
-        <div class="nav-tabs">
+        <div class="header-tabs">
           <button>New</button><button>Upload</button><button>Share</button>
         </div>
       </div>
-    </nav>
-    <header>
-      <div id="logo"><img src="" alt="" /></div>
-      <div class="pending-square"></div>
     </header>
+    <nav>
+      <div id="logo">
+        <svg width="50" height="50" xmlns="http://www.w3.org/2000/svg">
+          <!-- Define the small tile -->
+          <rect x="10" y="10" width="20" height="20" fill="#FF5733" />
+
+          <!-- Define the larger tiles -->
+          <rect x="10" y="40" width="40" height="40" fill="#3498DB" />
+          <rect x="50" y="40" width="20" height="20" fill="#E74C3C" />
+          <rect x="50" y="60" width="20" height="20" fill="#2ECC71" />
+
+          <!-- Add grid lines -->
+          <line
+            x1="10"
+            y1="10"
+            x2="100"
+            y2="10"
+            stroke="#000"
+            stroke-width="1"
+          />
+          <line
+            x1="10"
+            y1="10"
+            x2="10"
+            y2="100"
+            stroke="#000"
+            stroke-width="1"
+          />
+
+          <line
+            x1="50"
+            y1="40"
+            x2="50"
+            y2="100"
+            stroke="#000"
+            stroke-width="1"
+          />
+          <line
+            x1="10"
+            y1="40"
+            x2="100"
+            y2="40"
+            stroke="#000"
+            stroke-width="1"
+          />
+          <line
+            x1="10"
+            y1="60"
+            x2="100"
+            y2="60"
+            stroke="#000"
+            stroke-width="1"
+          />
+          <line
+            x1="50"
+            y1="60"
+            x2="100"
+            y2="60"
+            stroke="#000"
+            stroke-width="1"
+          />
+        </svg>
+
+        <h2>Dashboard</h2>
+      </div>
+
+      <div class="nav-buttons">
+        <div class="primary-buttons">
+          <button><i class="fa-light fa-house"></i>Home</button>
+          <button>Profile</button>
+          <button>Messages</button>
+          <button>History</button>
+          <button>Tasks</button>
+          <button>Communities</button>
+        </div>
+        <div class="configure-buttons">
+          <button>Settings</button><button>Support</button
+          ><button>Privacy</button>
+        </div>
+      </div>
+    </nav>
     <main>
-      <div class="hero"><h1>Alle Allle</h1></div>
-      <aside class="warning">Alle Allle Alle Allle</aside>
-      <aside class="notice">Alle AllleAlle AllleAlle Allle</aside>
+      <div class="hero">
+        <h1>Your Projects</h1>
+        <div class="projects"></div>
+      </div>
+
+      <aside class="warning"></aside>
+      <aside class="notice"></aside>
     </main>
   </body>
   <script src="static/app.js"></script>
