Create nav layout and article samples

--- a/index.html
+++ b/index.html
@@ -100,23 +100,73 @@
 
       <div class="nav-buttons">
         <div class="primary-buttons">
-          <button><i class="fa-light fa-house"></i>Home</button>
-          <button>Profile</button>
-          <button>Messages</button>
-          <button>History</button>
-          <button>Tasks</button>
-          <button>Communities</button>
+          <button><i class="fa-regular fa-house"></i> Home</button>
+          <button><i class="fa-regular fa-user"></i> Profile</button>
+          <button><i class="fa-regular fa-message"></i> Messages</button>
+          <button><i class="fa-solid fa-clock-rotate-left"></i> History</button>
+          <button><i class="fa-solid fa-list-check"></i> Tasks</button>
+          <button><i class="fa-light fa-user-group"></i> Communities</button>
         </div>
         <div class="configure-buttons">
-          <button>Settings</button><button>Support</button
-          ><button>Privacy</button>
+          <button><i class="fa-regular fa-gear"></i> Settings</button>
+          <button><i class="fa-regular fa-circle-question"></i> Support</button>
+          <button><i class="fa-regular fa-user-shield"></i> Privacy</button>
         </div>
       </div>
     </nav>
     <main>
       <div class="hero">
         <h1>Your Projects</h1>
-        <div class="projects"></div>
+        <div class="projects">
+          <article class="project-git">
+            <h2>Calculator</h2>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio
+              saepe laboriosam doloribus libero fuga laudantium alias qui
+              deleniti, voluptates quidem!
+            </p>
+            <div class="compatibility">lol</div>
+
+            <button class="preview">
+              <a href="www.google.com">Preview</a>
+            </button>
+            <button class="git-link">
+              <a href="www.github.com"></a>Git-lit
+            </button>
+          </article>
+          <article class="project-git">
+            <h2>Calculator</h2>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio
+              saepe laboriosam doloribus libero fuga laudantium alias qui
+              deleniti, voluptates quidem!
+            </p>
+            <div class="compatibility">lol</div>
+
+            <button class="preview">
+              <a href="www.google.com">Preview</a>
+            </button>
+            <button class="git-link">
+              <a href="www.github.com"></a>Git-lit
+            </button>
+          </article>
+          <article class="project-git">
+            <h2>Calculator</h2>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio
+              saepe laboriosam doloribus libero fuga laudantium alias qui
+              deleniti, voluptates quidem!
+            </p>
+            <div class="compatibility">lol</div>
+
+            <button class="preview">
+              <a href="www.google.com">Preview</a>
+            </button>
+            <button class="git-link">
+              <a href="www.github.com"></a>Git-lit
+            </button>
+          </article>
+        </div>
       </div>
 
       <aside class="warning"></aside>
