--- a/index.html
+++ b/index.html
@@ -100,17 +100,17 @@
 
       <div class="nav-buttons">
         <div class="primary-buttons">
-          <button><i class="fa-regular fa-house"></i> Home</button>
+          <button><i class="fa-solid fa-house-chimney"></i> Home</button>
           <button><i class="fa-regular fa-user"></i> Profile</button>
           <button><i class="fa-regular fa-message"></i> Messages</button>
           <button><i class="fa-solid fa-clock-rotate-left"></i> History</button>
           <button><i class="fa-solid fa-list-check"></i> Tasks</button>
-          <button><i class="fa-light fa-user-group"></i> Communities</button>
+          <button><i class="fa-solid fa-users-rays"></i> Communities</button>
         </div>
         <div class="configure-buttons">
-          <button><i class="fa-regular fa-gear"></i> Settings</button>
+          <button><i class="fa-solid fa-sliders"></i> Settings</button>
           <button><i class="fa-regular fa-circle-question"></i> Support</button>
-          <button><i class="fa-regular fa-user-shield"></i> Privacy</button>
+          <button><i class="fa-solid fa-shield-halved"></i>Privacy</button>
         </div>
       </div>
     </nav>
@@ -119,58 +119,211 @@
         <h1>Your Projects</h1>
         <div class="projects">
           <article class="project-git">
-            <h2>Calculator</h2>
+            <h2>To-do List</h2>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio
               saepe laboriosam doloribus libero fuga laudantium alias qui
               deleniti, voluptates quidem!
             </p>
-            <div class="compatibility">lol</div>
 
-            <button class="preview">
-              <a href="www.google.com">Preview</a>
-            </button>
-            <button class="git-link">
-              <a href="www.github.com"></a>Git-lit
-            </button>
+            <div class="card-buttons">
+              <button class="preview">
+                <i class="fa-regular fa-eye">
+                  <a
+                    href="https://md-mosabbir.github.io/To-do-List/"
+                    target="_blank"
+                  ></a
+                ></i>
+              </button>
+              <button class="git-link">
+                <i class="fa-brands fa-github">
+                  <a
+                    href="https://github.com/Md-Mosabbir/To-do-List.git"
+                    target="_blank"
+                  ></a
+                ></i>
+              </button>
+              <div class="compatibility">
+                Responsive with:
+                <i class="fa-solid fa-mobile-screen-button"></i>
+                <i class="fa-solid fa-desktop"></i>
+              </div>
+            </div>
           </article>
           <article class="project-git">
             <h2>Calculator</h2>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio
-              saepe laboriosam doloribus libero fuga laudantium alias qui
-              deleniti, voluptates quidem!
+              saepe labates quidem! Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Aliquam, nulla.
             </p>
-            <div class="compatibility">lol</div>
 
-            <button class="preview">
-              <a href="www.google.com">Preview</a>
-            </button>
-            <button class="git-link">
-              <a href="www.github.com"></a>Git-lit
-            </button>
+            <div class="card-buttons">
+              <button class="preview">
+                <i class="fa-regular fa-eye">
+                  <a
+                    href="https://md-mosabbir.github.io/Calculator/"
+                    target="_blank"
+                  ></a>
+                </i>
+              </button>
+              <button class="git-link">
+                <i class="fa-brands fa-github">
+                  <a
+                    href="https://github.com/Md-Mosabbir/Calculator.git"
+                    target="_blank"
+                  ></a
+                ></i>
+              </button>
+              <div class="compatibility">
+                Responsive with:
+                <i class="fa-solid fa-mobile-screen-button"></i>
+                <i class="fa-solid fa-desktop"></i>
+              </div>
+            </div>
           </article>
           <article class="project-git">
-            <h2>Calculator</h2>
+            <h2>Resturant-Page</h2>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio
+              saepe labates quidem! Loremt amet, cotur adipisicing elit.
+              Quisquam perferendis ad nostrum accusamus, veritatis doloribus!
+              Sed, similique ipsum, recusandae quae, quasi ex eos corrupti
+              architecto harum reiciendis quia porro a?
+            </p>
+
+            <div class="card-buttons">
+              <button class="preview">
+                <i class="fa-regular fa-eye">
+                  <a
+                    href="https://md-mosabbir.github.io/Resturant-Page/"
+                    target="_blank"
+                  ></a
+                ></i>
+              </button>
+              <button class="git-link">
+                <i class="fa-brands fa-github">
+                  <a
+                    href="https://github.com/Md-Mosabbir/Resturant-Page.git"
+                    target="_blank"
+                  ></a
+                ></i>
+              </button>
+              <div class="compatibility">
+                Responsive with:
+
+                <i class="fa-solid fa-desktop"></i>
+              </div>
+            </div>
+          </article>
+          <article class="project-git">
+            <h2>Battleship</h2>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio
               saepe laboriosam doloribus libero fuga laudantium alias qui
-              deleniti, voluptates quidem!
+              deleniti, voluptates quidem! Lorem ipsum dolor, sit amet
+              consectetur adipisicing elit. Quaerat hic consequuntur ad rem.
             </p>
-            <div class="compatibility">lol</div>
 
-            <button class="preview">
-              <a href="www.google.com">Preview</a>
-            </button>
-            <button class="git-link">
-              <a href="www.github.com"></a>Git-lit
-            </button>
+            <div class="card-buttons">
+              <button class="preview">
+                <i class="fa-regular fa-eye">
+                  <a
+                    href="https://md-mosabbir.github.io/Battleship/"
+                    target="_blank"
+                  ></a
+                ></i>
+              </button>
+              <button class="git-link">
+                <i class="fa-brands fa-github">
+                  <a
+                    href="https://github.com/Md-Mosabbir/Battleship.git"
+                    target="_blank"
+                  ></a
+                ></i>
+              </button>
+              <div class="compatibility">
+                Responsive with:
+                <i class="fa-solid fa-mobile-screen-button"></i>
+                <i class="fa-solid fa-desktop"></i>
+              </div>
+            </div>
+          </article>
+          <article class="project-git">
+            <h2>Weather App</h2>
+            <p>
+              Lorem ipsum dolor samet consectetur adipisicing elit. Quaerat hic
+              consequuntur ad rem.
+            </p>
+
+            <div class="card-buttons">
+              <button class="preview">
+                <i class="fa-regular fa-eye">
+                  <a
+                    href="https://md-mosabbir.github.io/Weather-App/"
+                    target="_blank"
+                  ></a
+                ></i>
+              </button>
+              <button class="git-link">
+                <i class="fa-brands fa-github">
+                  <a
+                    href="https://github.com/Md-Mosabbir/Weather-App.git"
+                    target="_blank"
+                  ></a
+                ></i>
+              </button>
+              <div class="compatibility">
+                Responsive with:
+                <i class="fa-solid fa-mobile-screen-button"></i>
+                <i class="fa-solid fa-desktop"></i>
+              </div>
+            </div>
           </article>
         </div>
       </div>
 
-      <aside class="warning"></aside>
-      <aside class="notice"></aside>
+      <div class="aside-container">
+        <aside class="warning">
+          <h2>Announcements</h2>
+          <div class="announce">
+            <div class="notice">
+              <h3>Site Maintenance</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                incidunt aut explicabo tempora atque!
+              </p>
+            </div>
+            <div class="notice">
+              <h3>Community Share Day</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+                sequi pariatur ut nihil, distinctio perspiciatis.
+              </p>
+            </div>
+            <div class="notice">
+              <h3>Updated Privacy Policy</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Consequuntur molestiae ducimus officiis inventore in quae eius
+                necessitatibus dolorem error. Expedita mollitia adipisci labore
+                provident. Fuga laudantium itaque exercitationem magnam culpa
+                accusamus eum.
+              </p>
+            </div>
+          </div>
+        </aside>
+        <aside class="trending">
+          <h2>Trending</h2>
+          <br />
+          <ul>
+            <li>#lol</li>
+            <li>#KuchiKuchiKu</li>
+            <li>#FreeMe</li>
+            <li>#WeirdWorldWeLiving</li>
+          </ul>
+        </aside>
+      </div>
     </main>
   </body>
   <script src="static/app.js"></script>
